2003.05.14
  - adding drawText/drawZoomedText/drawTextBox surface methods

2003.05.12
  - adding support for joysticks in linux/unix

2003.05.11
  - engine title now says the game name that you're playing instead of "Sphere"

2003.05.06
  - added ability to view tile obstructions from within editor
  - added font.getColorMask(), windowstyle.setColorMask(color) and windowstyle.getColorMask()

2003.05.04
  - fixes so that the SDL subsystem sort of compiles
  - fixed SetTileImage blend-mode bug

2003.05.01
  - added a linux doc for compiling sphere on linux
  - fixes so scons compiles in linux
  
2003.04.25
  - fixed MapView->View Grid so it takes into account zoom factors
  - fixed bug where map editor would crash if you used "Select Tile" on out of range tiles

2003.04.21
  - added playlist system script
  - added more menu items to the Edit Range menu in tile-view and spriteset-view
  - changed version number to 1.1

2003.04.17
  - added SetPersonAngle and GetPersonAngle
  
2003.04.16
  - added GetPersonBase (cheap alternative to GetPersonSpriteset(name).base)

2003.03.17
  - added surface_object.triangle(x1, y1, x2, y2, x3, y3, color)

2003.03.10
  - rearranged imageview paste menu items into a paste submenu
  - added paste->Into Selection
  - added SetDefaultMapScript and CallDefaultMapScript

2003.03.08
  - added a selection tool to the image editor
  - Fill->RGB/Alpha/Both, Replace->RGB/Alpha and Scale Alpha all work within the selection now
  - added an ellipse tool

2003.03.07
  - added a adjust brightness to the image editor

2003.03.06
  - added a resample image to the image editor
  - added an "other" slide menu option (so you can specify how much to slide by)
  - triggers/persons and zones are now also slided

2003.02.23
  - fixed ExecuteZones so that it reported errors if there no zones to execute

2003.02.22
  - made tileset view->zoom simplier and made it update the scrollbar when zooming

2003.02.20
  - added CallMapScript(SCRIPT)